[tool.poetry]
name = "Fourch-api"
version = "0.1.0"
description = ""
authors = ["BazZziliuS"]
readme = "README.md"
packages = [
    { include = "Fourch_api" }
]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
